@@ -1,3 +1,8 @@
+2004-01-16  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* HDSPACK.pm (_split_path): Make sure that we only split on dots
+	**in the filename** and not in the directory name. 
+
 2003-08-07  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* HDSPACK.pm (_find_loc): Was not passing cell locator to child.
